--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-sqlite-storage": "^3.3.3",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2"
