--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native-fontawesome": "^5.7.0",
     "react-native-sqlite-storage": "^3.3.3",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
