--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "extends": "rallycoding",
   "rules": {
-      "arrow-body-style": 0
+      "arrow-body-style": 0,
+      "no-shadow": 0,
+      "max-len": 0,
+      "camelcase": 0
     }
 }
